--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	<title>Sarbodaman Banerjee</title>
 </head>
 <body>
-	<h1>kaisan ba?</h1>
+	<h1 style="text-align: center;">kaisan ba?</h1>
+
+	<h1 style="text-align: center;">Hello buddy</h1>
+
+	<h2 style="text-align: center;"> Well, that's a revision of my html practice</h2>
+	<li>pandey gandu 
+
+	</li>
 
 </body>
-</html>
+</html>	
