--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 	<h1 style="text-align: center;">Hello buddy</h1>
 
 	<h2 style="text-align: center;"> Well, that's a revision of my html practice</h2>
-	<li>pandey gandu 
-
-	</li>
+	<li>pandey gandu </li>
+	<li>Bharwa </li>a
 
 </body>
 </html>	
