--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 	<h2 style="text-align: center;"> Well, that's a revision of my html practice</h2>
 	<li>pandey gandu </li>
-	<li>Bharwa </li>a
+	<li>Bharwa </li>
+	<ul>Lun-ordereed list </ul>
+
 
 </body>
 </html>	
