--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
 	<title>Sarbodaman Banerjee</title>
 </head>
 <body>
-	<h1 style="text-align: center;">kaisan ba?</h1>
+	
+	<h1 style="text-align: center;"> काक चेष्टा, बको ध्यानं,
+स्वान निद्रा तथैव च ।
+अल्पहारी, गृहत्यागी,
+विद्यार्थी पंच लक्षणं ॥</h1>
 
-	<h1 style="text-align: center;">Hello buddy</h1>
+  <hr size="3">
+<h1 style="text-align: center;">kaisan ba?</h1>
 
+	 
 	<h2 style="text-align: center;"> Well, that's a revision of my html practice</h2>
-	<li>pandey gandu </li>
-	<li>Bharwa </li>
-	<ul>Lun-ordereed list </ul>
+ 
+
+
 
 
 </body>
